fixed technical details wrapping

--- a/public/sass/part.scss
+++ b/public/sass/part.scss
@@ -200,9 +200,6 @@
 				text-transform: uppercase;
 			}
 			.field{
-				display:inline-block;
-				width: 30%;
-				margin-right:10%;
 				font-size:16px;
 				font-weight:bold;
 				text-align:right;
